データベース構築

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,5 @@
 .toppagewrapper {
-  background-image: url('toppage.png');
+  background-image: url('KAZUHIRO171013110.jpg');
   width: 100vw;
   height: 100vh;
   background-position: center;
@@ -35,8 +35,25 @@
   text-align: center;
   width: 100vw;
   height: 100vh;
+  background-image: url('YAMA_DSC2553.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 .etc-btn {
   text-align: center;
+}
+
+.userpage-wrapper {
+  background-color: #3399FF;
+  text-align: center;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('MIMIYAKO85_cahigashi20140726.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
